# dyndowntools

./: .gitattributes  .gitignore  LICENSE  README.md  dyndown_environment.yml  pyproject.toml
Jupyter_Notebooks/: ERA5-Land_GEE_SD_plot.ipynb  FAI_PAFA_hourly_precip_NCEI.csv  FIRMS_regrid.ipynb  Fig01_domain.ipynb  FirePerimsRegrid_ERA5.ipynb  Generate_ERA5_Download_CSV.ipynb  JRA55_ERA5_climsnow.ipynb  JRA55_ERA5_snow.ipynb  JRA55_ERA5_snow_unify_proto.ipynb  JRA55_ERA5_snow_unify_proto_macbook.ipynb  JRA55_snow_clim_explore.ipynb  JRA55_snow_clim_plot_example.ipynb  NC_visualize.ipynb  SiphonTest.ipynb  analyisis_flood1967.ipynb  analyisis_snowacc_forRickT.ipynb  analyisis_snowacc_forRickT_prototype.ipynb  analyisis_snowacc_forRickT_regress.ipynb  analyisis_winterrain_forRickT_prototype.ipynb  analysis_1967_flood.ipynb  analysis_extract_singlepix.ipynb  analysis_load_acis_precip.ipynb  analysis_make_windrose.ipynb  analysis_make_windrose_stashed.ipynb  analysis_precip_histograms.ipynb  analysis_precip_histograms_2.ipynb  analysis_precip_histograms_w_undownscaled.ipynb  analysis_precip_scatterplot.ipynb  analysis_precip_test_mf_vs_single.ipynb  analysis_temp_histograms.ipynb  analysis_temp_histograms_forPub.ipynb  analysis_temp_histograms_w_undownscaled.ipynb  analysis_util_monthly_era5.ipynb  analysis_util_monthly_era5_redux.ipynb  analysis_wind_histograms.ipynb  analysis_wind_histograms_w_undownscaled.ipynb  analysis_wind_histograms_w_undownscaled_redux.ipynb  analysis_windspd_grid.ipynb  analysis_windspd_quantiles_01_prototype.ipynb  (+18 more)
dsworkflow/: addtoqueue.py  (+48 more)
(+215 files in other folders)
