[project]
authors = [{name = "Chris Waigl", email = "cwaigl@alaska.edu"}]
dependencies = []
name = "dyndowntools"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
dyndowntools = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
xarray = ">=2025.6.1,<2026"
wrf-python = ">=1.4.0,<2"
regionmask = ">=0.13.0,<0.14"
jupyter = ">=1.1.1,<2"
dask = ">=2025.5.1,<2026"
salem = ">=0.3.11,<0.4"
pyogrio = ">=0.11.0,<0.12"
pyarrow = ">=20.0.0,<21"
scipy = ">=1.16.0,<2"
cartopy = ">=0.24.0,<0.25"
seaborn = ">=0.13.2,<0.14"
nb-clean = ">=4.0.1,<5"
altair-all = ">=5.5.0,<6"
scikit-image = ">=0.25.2,<0.26"
